# AMRO-Analysis

./: .gitignore  LICENSE  README.MD  pyproject.toml  requirements.txt  setup.py
data/: README.md
figures/: README.md
notebooks/: 01-example-analysis.ipynb  01-load-fourier-and-fit.ipynb  README.md
scripts/: README.md  run_cleaner.py  run_pipeline.py
src/amro/: __init__.py
src/amro/config/: __init__.py  cleaner.py  headers.py  paths.py  settings.py
src/amro/data/: __init__.py  cleaner.py  data_structures.py  loader.py  validators.py
src/amro/features/: __init__.py  fourier.py
src/amro/models/: __init__.py  fitter.py
src/amro/plotting/: __init__.py  fitter.py  fourier.py  loader.py
src/amro/utils/: __init__.py  conversions.py  utils.py
tests/: README.md  conftest.py  test_cleaner.py  test_cli.py  test_conversions.py  test_data_structures.py  test_fitter.py  test_fourier.py  test_loader.py  test_utils.py
