[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amro"
version = "0.1.0"
description = "AMRO Fourier Transform and Fitting Analysis for YbPdBi"
readme = "README.MD"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "James Fraser", email = "james.fraser@umontreal.ca", orcid = "0000-0003-2611-9686"}
]
maintainers = [
    {name = "James Fraser", email = "james.fraser@umontreal.ca"}
]
keywords = ["physics", "condensed-matter", "fermi-surface", "magnetoresistance", "amro"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
 "numpy",
 "pandas",
 "scipy",
 "matplotlib",
 "seaborn",
 "lmfit",
]

[project.optional-dependencies]
dev = [
 "pytest",
 "jupyter",
 "ipython",
]