[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amro"
version = "0.1.0"
description = "Angle-resolved Magnetoresistance Oscillation (AMRO) Analysis by Fourier transform and best fit."
readme = "README.MD"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    # ORCID: 0000-0003-2611-9686
    {name = "James Fraser", email = "james.fraser@umontreal.ca"}

]
maintainers = [
    {name = "James Fraser", email = "james.fraser@umontreal.ca"}
]
keywords = ["physics", "condensed-matter", "fermi-surface", "magnetoresistance", "amr", "amro"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
 "numpy>=1.24.0",
 "pandas>=2.0.0",
 "scipy>=1.10.0",
 "matplotlib>=3.7.0",
 "seaborn>=0.12.0",
 "lmfit>=1.2.0",
]

[project.optional-dependencies]
dev = [
 "pytest",
 "jupyter",
 "ipython",
]

[tool.setuptools.packages.find]
where = ["src"]